@@ -89,6 +89,7 @@ that two objects are of the same level, or to access a particular class::
 
 """
 from collections import namedtuple
+import weakref
 import numpy as np
 import functools
 import itertools
@@ -730,14 +731,18 @@ class GroupBase(_MutableBase):
         universe_key : str (optional, defaults to the same as `key`)
             The key of the validty dictionary under universe.
 
+        Returns
+        -------
+        was_valid : bool
+            Whether the cache was valid or not (in which case it has been
+            cleared).
 
         .. versionadded:: 2.0.0
         """
 
         if universe_key is None:
             universe_key = key
-
-        u_cache = self.universe._cache.setdefault('_valid', dict())
+        u_cache = self.universe._cache['_valid']
 
         # A WeakSet is used so that keys from out-of-scope/deleted
         # objects don't clutter it.
@@ -745,7 +750,7 @@ class GroupBase(_MutableBase):
         try:
             if self._cache_key in valid_caches:
                 # cache is valid
-                return
+                return True
         except AttributeError:
             # No _cache_key yet. Must create one for the validity registry.
             # self could be used itself as a weakref, but set() requires
@@ -756,6 +761,7 @@ class GroupBase(_MutableBase):
         # invalidate cache but mark it already as valid for future lookups
         self._cache.pop(key, None)
         valid_caches.add(self._cache_key)
+        return False
 
     def _get_compound_indices(self, compound):
         if compound == 'residues':
@@ -804,7 +810,7 @@ class GroupBase(_MutableBase):
          array([[1, 2, 3, 0],
                 [8, 7, 6, 9]])]
 
-        (Note that atom order within component submasks may be lost unless a
+        (Note that atom order within compound submasks may be lost unless a
         `stable_sort` is requested)
         These submasks can be used directly to fancy-index arrays of the same
         length as self (including :class:`AtomGroups<AtomGroup>`).
@@ -838,6 +844,7 @@ class GroupBase(_MutableBase):
         n_compounds : int
             The number of individual compounds.
         """
+
         # Should we include here the grouping for 'group', which is essentially
         # a non-split?
 
@@ -848,9 +855,9 @@ class GroupBase(_MutableBase):
                                             universe_key=compound)
         try:
             masks, is_stable = self._cache[local_cache_key]
-            # cached masks come tupled with a bool indicating whether they
-            # originate from a stable sort of compound indices
-            # stably sorted is stricter; if it's not requested then any mask
+            # Cached masks come tupled with a bool indicating whether they
+            # originate from a stable sort of compound indices.
+            # Stably sorted is stricter; if it's not requested then any mask
             # will do
             if not stable_sort or (stable_sort and is_stable):
                 return masks
@@ -995,14 +1002,12 @@ class GroupBase(_MutableBase):
             weights = weights.astype(dtype, copy=False)
             return (coords * weights[:, None]).sum(axis=0) / weights.sum()
 
-        # When compound split caching gets implemented it will be clever to
-        # preempt at this point whether or not stable sorting will be needed
-        # later for unwrap (so that we don't split now with non-stable sort,
-        # only to have to re-split with stable sort if unwrap is requested).
+        # Since unwrapping needs a stable sort, we ask for it here already so
+        # it stays in cache and we save time a couple lines ahead.
         (atom_masks,
          compound_masks,
-         n_compounds) = self._split_by_compound_indices(comp)
-
+         n_compounds) = self._split_by_compound_indices(comp,
+                                                        stable_sort=unwrap)
         # Unwrap Atoms
         if unwrap:
             coords = atoms.unwrap(compound=comp, reference=None, inplace=False)
@@ -1485,6 +1490,30 @@ class GroupBase(_MutableBase):
         ``'atoms'``, each compound as a whole will be shifted so that its
         `center` lies within the primary unit cell.
 
+        Wrapping with `compound`='atoms'::
+
+            +-----------+               +-----------+
+            |           |               |           |
+            |           | 3 6           | 3 6       |
+            |           | ! !           | ! !       |
+            |         1-|-2-5-8  ==>    |-2-5-8   1-|
+            |           | ! !           | ! !       |
+            |           | 4 7           | 4 7       |
+            |           |               |           |
+            +-----------+               +-----------+
+
+        Wrapping with `compound`='fragments'::
+
+            +-----------+               +-----------+
+            |           |               |           |
+            |           | 3 6           | 3 6       |
+            |           | ! !           | ! !       |
+            |         1-|-2-5-8  ==>  1-|-2-5-8     |
+            |           | ! !           | ! !       |
+            |           | 4 7           | 4 7       |
+            |           |               |           |
+            +-----------+               +-----------+
+
         Parameters
         ----------
         compound : {'atoms', 'group', 'segments', 'residues', 'molecules', \
@@ -1493,8 +1522,9 @@ class GroupBase(_MutableBase):
             in any case, *only* the positions of :class:`Atoms<Atom>`
             *belonging to the group* will be taken into account.
         center : {'com', 'cog'}
-            How to define the center of a given group of atoms. If `compound` is
-            ``'atoms'``, this parameter is meaningless and therefore ignored.
+            How to define the center of a given group of atoms. If `compound`
+            is ``'atoms'``, this parameter is meaningless and therefore
+            ignored.
         box : array_like, optional
             The unitcell dimensions of the system, which can be orthogonal or
             triclinic and must be provided in the same format as returned by
@@ -1659,7 +1689,9 @@ class GroupBase(_MutableBase):
         This function is most useful when atoms have been packed into the
         primary unit cell, causing breaks mid-molecule, with the molecule then
         appearing on either side of the unit cell. This is problematic for
-        operations such as calculating the center of mass of the molecule. ::
+        operations such as calculating the center of mass of the molecule.
+
+        Unwrapping with `compound`='fragments'::
 
            +-----------+       +-----------+
            |           |       |           |
@@ -1780,29 +1812,63 @@ class GroupBase(_MutableBase):
             atom_masks = unique_atoms._split_by_compound_indices(comp,
                                               stable_sort=reference is None)[0]
             positions = unique_atoms.positions
+            # We preselect where to spend the expensive unwrap effort by
+            # vectorially calculating the spread of all the compounds of the
+            # same size. If a compound doesn't spread over half a box vector,
+            # then it doesn't need unwrapping.
             for atom_mask in atom_masks:
-                for mask in atom_mask:
-                    positions[mask] = mdamath.make_whole(unique_atoms[mask],
-                                                         inplace=False)
-                # Apply reference shift if required:
-                if reference is not None:
-                    if reference == 'com':
-                        masses = unique_atoms.masses[atom_mask]
-                        total_mass = masses.sum(axis=1)
-                        if np.any(np.isclose(total_mass, 0.0)):
-                            raise ValueError("Cannot perform unwrap with "
-                                             "reference='com' because the "
-                                             "total mass of at least one of "
-                                             "the {} is zero.".format(comp))
-                        refpos = np.sum(positions[atom_mask]
-                                        * masses[:, :, None], axis=1)
-                        refpos /= total_mass[:, None]
-                    else:  # reference == 'cog'
-                        refpos = positions[atom_mask].mean(axis=1)
+
+                # Shortcut for single-particle compounds. Will not error even
+                # if they are massless and com shifts are requested.
+                if atom_mask.shape[-1] == 1:
+                    if reference is not None:
+                        # Same operation, regardless of cog vs com shifting.
+                        positions[atom_mask[:, 0]] = distances.apply_PBC(
+                                                    positions[atom_mask[:, 0]],
+                                                    self.dimensions)
+                    continue
+
+                # For performance, trying to do as little fancy-indexing as
+                # possible. For positions, one at the start of the loop and one
+                # at the end; for the atoms, one per AtomGroup to unwrap; and
+                # and one for the masses, if doing COM.
+                pos = positions[atom_mask]
+                spreads = pos.ptp(axis=1)
+                spreads = distances.transform_RtoS(spreads, self.dimensions)
+                to_unwrap = np.where(np.any(spreads > .5, axis=1))[0]
+
+                # i is the index to unwrap within the same-sized chunk of
+                # compounds. Because these are just views, this'll change pos
+                # in-place.
+                for i, mask in zip(to_unwrap, atom_mask[to_unwrap]):
+                    ats_to_unwrap = unique_atoms[mask]
+                    pos[i] = mdamath.make_whole(ats_to_unwrap, inplace=False)
+
+                # If we don't need to do reference shifting, we're done
+                if reference is None:
+                    positions[atom_mask] = pos
+                    continue
+
+                # Apply reference shift
+                if reference == 'com':
+                    try:
+                        weights = np.broadcast_to(
+                            unique_atoms.masses[atom_mask, None], pos.shape)
+                        refpos = np.average(pos, axis=1, weights=weights)
+                    except ZeroDivisionError:
+                        raise ValueError("Cannot perform unwrap with "
+                                         "reference='com' because the "
+                                         "total mass of at least one "
+                                         "of the {} is zero."
+                                         .format(comp))
+                    # Masses come as float64 and upconvert the result
                     refpos = refpos.astype(np.float32, copy=False)
-                    target = distances.apply_PBC(refpos, self.dimensions)
-                    positions[atom_mask] += (target[:, None, :]
-                                             - refpos[:, None, :])
+                else:  # reference == 'cog'
+                    refpos = pos.mean(axis=1)
+
+                target = distances.apply_PBC(refpos, self.dimensions)
+                positions[atom_mask] = pos + (target[:, None, :]
+                                              - refpos[:, None, :])
         if inplace:
             unique_atoms.positions = positions
         if not atoms.isunique:
@@ -2397,7 +2463,7 @@ class AtomGroup(GroupBase):
     (e.g. as a tuple, or as attributes of the object to be pickled), or the
     implicit new Universe (`AtomGroup.Universe`) needs to be used.
     Second, When multiple AtomGroup need to be pickled, they will recognize if
-    they belong to the same Univese or not.
+    they belong to the same Universe or not.
     Also keep in mind that they need to be pickled together.
 
     See Also
@@ -2488,6 +2554,9 @@ class AtomGroup(GroupBase):
         # comprehension isn't terrible.
         for at, r in zip(self, r_ix):
             self.universe._topology.tt.move_atom(at.ix, r)
+
+        # AtomGroup-level caches involving resindices are no longer valid
+        self.universe._cache['_valid'].pop('residues', None)
 
     @property
     def n_residues(self):
@@ -3506,6 +3575,9 @@ class ResidueGroup(GroupBase):
         for r, s in zip(self, s_ix):
             self.universe._topology.tt.move_residue(r.ix, s)
 
+        # AtomGroup-level caches involving segindices are no longer valid
+        self.universe._cache['_valid'].pop('segments', None)
+
     @property
     def n_segments(self):
         """Number of unique segments present in the ResidueGroup.
@@ -3859,6 +3931,9 @@ class Atom(ComponentBase):
                             "".format(type(new)))
         self.universe._topology.tt.move_atom(self.ix, new.resindex)
 
+        # AtomGroup-level caches involving resindices are no longer valid
+        self.universe._cache['_valid'].pop('residues', None)
+
     @property
     def segment(self):
         return self.universe.segments[self.universe._topology.segindices[self]]
@@ -3983,6 +4058,9 @@ class Residue(ComponentBase):
             raise TypeError("Can only set Residue segment to Segment, not {}"
                             "".format(type(new)))
         self.universe._topology.tt.move_residue(self.ix, new.segindex)
+
+        # AtomGroup-level caches involving segindices are no longer valid
+        self.universe._cache['_valid'].pop('segments', None)
 
 
 class Segment(ComponentBase):
@@ -4262,6 +4340,13 @@ Residue.level = RESIDUELEVEL
 ResidueGroup.level = RESIDUELEVEL
 Segment.level = SEGMENTLEVEL
 SegmentGroup.level = SEGMENTLEVEL
+
+
+# A dummy, empty, cheaply-hashable object class to use with weakref caching.
+# (class object doesn't allow weakrefs to its instances, but user-defined
+#  classes do)
+class _CacheKey:
+    pass
 
 
 def requires(*attrs):
